--- a/readme
+++ b/readme
@@ -1,3 +1,8 @@
+
+
+Original readme:
+
+
 In order to compile C++ shared libraries please run script/makeall.csh
 In order to compile python bindings please modify script/make_python_bindings.csh
 according to your needs and run it.
